--- a/index.html
+++ b/index.html
@@ -9,29 +9,26 @@
 </head>
 <body>
     <div class="portfolio-container">
-        <!-- ABOUT ME Section -->
+        <!-- This is ABOUT ME Section -->
         <section class="about-section">
             <h1>About Me</h1>
             <div class="about-container">
                 <img src="c:\Users\MILES\Documents\my portfolio picture.jpg" alt="My Picture" class="profile-picture">
                 <div class="text-block">
                     <h3>Introduction</h3>
-                    <p>
                         Hello, and welcome to my portfolio! 
                         My name is Emmanuel Wandera Bahati, and I am a dedicated educator with a specialization in teaching visually impaired learners.
                         As a teacher of special needs education, I am deeply passionate about making knowledge accessible to everyone, regardless of their abilities.
-                    </p>
-                    <p>
+                    
                         Beyond my role as an educator, I have discovered a love for software engineering and coding. 
                         Technology has the power to transform lives, and I am eager to bridge my expertise in special education with my growing skills as a developer.
-                    </p>
                 </div>
             </div>
         </section>
 
         <hr>
 
-        <!-- EDUCATION BACKGROUND Section -->
+        <!-- My EDUCATION BACKGROUND Section -->
         <section class="education-section">
             <h3>Education Background</h3>
             <details>
@@ -60,7 +57,8 @@
         <h2>My Projects</h2>
         <p>Explore my creative projects developed using <strong>HTML, CSS, JavaScript, and Python.</strong></p>
         <div class="projects-wrapper">
-            <!-- Project 1 -->
+
+            <!-- My Project 1 -->
             <div class="project-container">
                 <div class="project-card">
                     <img src="c:\Users\MILES\Downloads\cartoon-calculator-with-pen-and-note-vector.jpg" alt="Scientific Calculator">
@@ -76,7 +74,8 @@
                     <a href="https://github.com/YourUsername/ScientificCalculatorRepo" target="_blank" class="view-repo">View Repository</a>
                 </div>
             </div>
-            <!-- Project 2 -->
+
+            <!-- This is Project 2 -->
             <div class="project-container">
                 <div class="project-card">
                     <img src="c:\Users\MILES\Downloads\addiction1.jpg" alt="Addiction Helper Website">
@@ -92,7 +91,8 @@
                     <a href="https://github.com/YourUsername/AddictionHelperRepo" target="_blank" class="view-repo">View Repository</a>
                 </div>
             </div>
-            <!-- Project 3 -->
+
+            <!-- My Project 3 -->
             <div class="project-container">
                 <div class="project-card">
                     <img src="c:\Users\MILES\Downloads\minecraft.jpg" alt="Simple Minecraft Game">
@@ -110,9 +110,16 @@
         </div>
     </section>
     <br></br>
+               <!--the contact section and also adding the social icons-->
     <section class="contact-section">
         <h2>Contact Me</h2>
-        <p>Feel free to reach out or connect with me on social media!</p>
+             <p>
+              Thank you for visiting my portfolio!
+              I’m always excited to connect with individuals, teams, or organizations
+              looking to collaborate innovate, or explore new opportunities.</p>
+              Whether you have a project idea, a question, or just want to say hello 
+              feel free to drop me a message.
+             </p>
         <div class="contact-form">
             <form>
                 <input type="text" placeholder="Your Name" required>
@@ -123,7 +130,6 @@
         </div>
         <div class="social-icons">
             <h3>Social Handles:</h3>
-            <a href="https://x.com/manuel_nacray" class="icon x" target="_blank"><i class="fab fa-x-twitter"></i> X</a> <!-- X icon -->
             <a href="https://www.linkedin.com/in/https://www.linkedin.com/in/emmanuel-wandera-9ab423290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="icon linkedin" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
             <a href="https://www.instagram.com/emmanuelwandera_" class="icon instagram" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
         </div>
