--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="about-section">
             <h1>About Me</h1>
             <div class="about-container">
-                <img src="c:\Users\MILES\Documents\my portfolio picture.jpg" alt="My Picture" class="profile-picture">
+                <img src="./IMG_20240605_110624.jpg" alt="My Picture" class="profile-picture">
                 <div class="text-block">
                     <h3>Introduction</h3>
                         Hello, and welcome to my portfolio! 
