--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <!-- This is Project 2 -->
             <div class="project-container">
                 <div class="project-card">
-                    <img src="c:\Users\MILES\Downloads\addiction1.jpg" alt="Addiction Helper Website">
+                    <img src="./https://github.com/wandera-emmanuel/my-portfolio/blob/main/addiction.jpg" alt="Addiction Helper Website">
                     <h3>Addiction Helper</h3>
                     <a href="https://your-live-link.com" target="_blank" class="view-live">View Live</a>
                 </div>
