--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <!-- My Project 3 -->
             <div class="project-container">
                 <div class="project-card">
-                    <img src="c:\Users\MILES\Downloads\minecraft.jpg" alt="Simple Minecraft Game">
+                    <img src="minecraft.jpg" alt="Simple Minecraft Game">
                     <h3>Simple Minecraft Game</h3>
                     <a href="https://your-live-link.com" target="_blank" class="view-live">View it here !</a>
                 </div>
