--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p><strong>Power Learn Academy</strong> - Certification in Software Engineering (2025)</p>
                 <p><strong>Mirera High School</strong> - Grade: B- (2021)</p>
             </details>
-            <a href="c:\Users\MILES\Documents\emmanuel wandera cv.docx" target="_blank" class="download-btn">Download My CV</a>
+            <a href="./emmanuel wandera cv (3).docx" target="_blank" class="download-btn">Download My CV</a>
         </section>
 
         <hr>
