--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- My Project 1 -->
             <div class="project-container">
                 <div class="project-card">
-                    <img src="c:\Users\MILES\Downloads\cartoon-calculator-with-pen-and-note-vector.jpg" alt="Scientific Calculator">
+                    <img src="./cartoon-calculator-with-pen-and-note-vector.jpg" alt="Scientific Calculator">
                     <h3>Scientific Calculator</h3>
                     <a href="https://your-live-link.com" target="_blank" class="view-live">View Live</a>
                 </div>
@@ -78,7 +78,7 @@
             <!-- This is Project 2 -->
             <div class="project-container">
                 <div class="project-card">
-                    <img src="./addiction.jpg" alt="Addiction Helper Website">
+                    <img src="./addiction1.jpg" alt="Addiction Helper Website">
                     <h3>Addiction Helper</h3>
                     <a href="https://your-live-link.com" target="_blank" class="view-live">View Live</a>
                 </div>
