--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="project-card">
                     <img src="./cartoon-calculator-with-pen-and-note-vector.jpg" alt="Scientific Calculator">
                     <h3>Scientific Calculator</h3>
-                    <a href="https://your-live-link.com" target="_blank" class="view-live">View Live</a>
+                    <a href="https://github.com/wandera-emmanuel/scientific-calculator.git" target="_blank" class="view-live">View Live</a>
                 </div>
                 <div class="project-description">
                     <h4>Scientific Calculator</h4>
