--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         A fully functional scientific calculator equipped with advanced features to perform complex mathematical operations.
                         It’s built with HTML, CSS, JavaScript, and Python.
                     </p>
-                    <a href="https://github.com/YourUsername/ScientificCalculatorRepo" target="_blank" class="view-repo">View Repository</a>
+                    <a href="./https://github.com/YourUsername/ScientificCalculatorRepo" target="_blank" class="view-repo">View Repository</a>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                 <div class="project-card">
                     <img src="./addiction1.jpg" alt="Addiction Helper Website">
                     <h3>Addiction Helper</h3>
-                    <a href="https://your-live-link.com" target="_blank" class="view-live">View Live</a>
+                    <a href="./https://github.com/wandera-emmanuel/crave-less-web.git" target="_blank" class="view-live">View Live</a>
                 </div>
                 <div class="project-description">
                     <h4>Addiction Helper</h4>
