--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         A fully functional scientific calculator equipped with advanced features to perform complex mathematical operations.
                         It’s built with HTML, CSS, JavaScript, and Python.
                     </p>
-                    <a href="./https://github.com/YourUsername/ScientificCalculatorRepo" target="_blank" class="view-repo">View Repository</a>
+                    <a href="https://github.com/wandera-emmanuel/scientific-calculator.git" target="_blank" class="view-repo">View Repository</a>
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
                         An interactive website offering support and resources to individuals seeking help in overcoming addiction.
                         Developed with HTML, CSS, and JavaScript.
                     </p>
-                    <a href="https://github.com/YourUsername/AddictionHelperRepo" target="_blank" class="view-repo">View Repository</a>
+                    <a href="./https://github.com/wandera-emmanuel/crave-less-web.git" target="_blank" class="view-repo">View Repository</a>
                 </div>
             </div>
 
@@ -97,14 +97,14 @@
                 <div class="project-card">
                     <img src="minecraft.jpg" alt="Simple Minecraft Game">
                     <h3>Simple Minecraft Game</h3>
-                    <a href="https://your-live-link.com" target="_blank" class="view-live">View it here !</a>
+                    <a href="https://github.com/wandera-emmanuel/crave-less-web.git" target="_blank" class="view-live">View it here !</a>
                 </div>
                 <div class="project-description">
                     <h4>Simple Minecraft Game</h4>
                     <p>
                         A minimalist game inspired by Minecraft, focusing on building and exploration. Built with HTML, CSS, and JavaScript.
                     </p>
-                    <a href="https://github.com/YourUsername/MinecraftGameRepo" target="_blank" class="view-repo">View Repository</a>
+                    <a href="https://github.com/wandera-emmanuel/crave-less-web.git" target="_blank" class="view-repo">View Repository</a>
                 </div>
             </div>
         </div>
